Align form with existing MS form

--- a/app/views/confirmation.njk
+++ b/app/views/confirmation.njk
@@ -18,6 +18,7 @@
         They will contact you either to confirm your registration, or to ask for more information.
       </p>
       
+      <pre><code>{{ complaint | dump(2) | safe }}</code></pre>
     </div>
   </div>
 {% endblock %}
