--- a/app/views/home.njk
+++ b/app/views/home.njk
@@ -1,38 +1,40 @@
-{% extends "_layout.njk" %}
+{% extends '_layout.njk' %}
 
-{% from "govuk/components/breadcrumbs/macro.njk" import govukBreadcrumbs %}
+{% from "govuk/components/input/macro.njk" import govukInput %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 
-{% block beforeContent %}
-  {{ govukBreadcrumbs({
-    items: [
-      {
-        text: "Home",
-        href: "#"
-      }]
-  }) }}
-{% endblock %}
-
 {% block content %}
+<div id="home-page">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl">Walleys Quarry - Report an Incident</h1>
+      <h1 class="govuk-heading-xl">Walleys Quarry Landfill Site Incident Reporting Form</h1>
 
-      <p class="govuk-body">Use this example service to:</p>
+      <p class="govuk-body">Report a problem with smells from Walleys Quarry landfill site</p>
 
-      <ul class="govuk-list govuk-list--bullet">
-        <li>Register a complaint about Walleys Quarry</li>
-      </ul>
+      <p class="govuk-body">
+        The Environment Agency is aware of the impacts of the operations at Walleys Quarry Landfill Site. We recognise the distress this is causing the local community and are working hard with our partners to challenge the operator, Walleys Quarry Ltd. to take the necessary actions to become compliant with their permits.
+      </p>
 
-      <p class="govuk-body">Registering takes around 5 minutes.</p>
+      <p class="govuk-body">
+        The Environment Agency is committed to keeping residents updated with the latest information, which we publish weekly on our webpage. You can access our web page here: <a href="https://consult.environment-agency.gov.uk/west-midlands/walleys-quarry-landfill-sliverdale/" target="_blank">https://consult.environment-agency.gov.uk/west-midlands/walleys-quarry-landfill-sliverdale/</a> (link opens new tab).
+      </p>
+
+      <p class="govuk-body">
+        You can also receive these updates by email by signing up to our mailing list. Please contact <a href="mailto:Enquiries_WestMids@environment-agency.gov.uk">Enquiries_WestMids@environment-agency.gov.uk</a> if you wish to subscribe for these updates. You may unsubscribe from this list at any time.
+      </p>
+
+      <p class="govuk-body">
+        If having reviewed the update on our web page you still wish to report a problem, please use this form. 
+        Please be aware of the following when completing the form:
+      </p>
 
       {{ govukButton({
         classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8",
-        href: "/complaint/name",
+        href: "/about-you",
         isStartButton: true,
-        text: "Start new complaint"
+        text: "Report incident"
       }) }}
-
     </div>
   </div>
+</div>
 {% endblock %}
