--- a/app/views/home.njk
+++ b/app/views/home.njk
@@ -7,9 +7,9 @@
 <div id="home-page">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl">Walleys Quarry Landfill Site Incident Reporting Form</h1>
+      <h1 class="govuk-heading-xl">Report a problem with smells from Walleys Quarry landfill site</h1>
 
-      <p class="govuk-body">Report a problem with smells from Walleys Quarry landfill site</p>
+      <p class="govuk-body">Walleys Quarry Landfill Site Incident Reporting Form</p>
 
       <p class="govuk-body">
         The Environment Agency is aware of the impacts of the operations at Walleys Quarry Landfill Site. We recognise the distress this is causing the local community and are working hard with our partners to challenge the operator, Walleys Quarry Ltd. to take the necessary actions to become compliant with their permits.
