--- a/app/views/confirmation.njk
+++ b/app/views/confirmation.njk
@@ -1,4 +1,4 @@
-{% extends '_layout.njk' %}
+{% extends "_layout.njk" %}
 {% set mainClasses = "govuk-main-wrapper--auto-spacing" %}
 {% from "govuk/components/panel/macro.njk" import govukPanel %}
 
