--- a/app/views/accessibility-statement.html
+++ b/app/views/accessibility-statement.html
@@ -1,4 +1,4 @@
-{% extends "two-thirds.njk" %}
+{% extends "two-thirds.html" %}
 
 {% set pageTitle = "Accessibility statement for the " + serviceName + " service" %}
 
@@ -77,7 +77,6 @@
       </p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <!-- <li>maps</li> -->
         <li>third party content which is out of our control<!--, for example a corporate logo on the map the website uses--></li>
         <li>PDF content that was published before 23 September 2018</li>
       </ul>
