--- a/app/views/confirmation.html
+++ b/app/views/confirmation.html
@@ -1,4 +1,4 @@
-{% extends "two-thirds.njk" %}
+{% extends "two-thirds.html" %}
 
 {% set mainClasses = "govuk-main-wrapper--auto-spacing" %}
 {% from "govuk/components/panel/macro.njk" import govukPanel %}
