--- a/app/views/details-of-the-smell.html
+++ b/app/views/details-of-the-smell.html
@@ -1,4 +1,4 @@
-{% extends "form.njk" %}
+{% extends "form.html" %}
 
 {% from "govuk/components/input/macro.njk" import govukInput %}
 {% from "govuk/components/textarea/macro.njk" import govukTextarea %}
@@ -9,8 +9,8 @@
 
 {% block form %}
   <div id="details-of-the-smell">
-    {{ govukTextarea(fields.smellDescription) }}
-    {{ govukInput(fields.dateOfSmell) }}
-    {{ govukInput(fields.timeOfSmell) }}
+    {{ govukTextarea(fields.description) }}
+    {{ govukInput(fields.date) }}
+    {{ govukInput(fields.time) }}
   </div>
 {% endblock %}
