--- a/app/views/form.html
+++ b/app/views/form.html
@@ -1,4 +1,4 @@
-{% extends "two-thirds.njk" %}
+{% extends "two-thirds.html" %}
 
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
@@ -7,6 +7,7 @@
 {% block beforeContent %}
   {{ govukBackLink({
     text: "Back",
+    classes: "nojs-hidden",
     href: "javascript:history.back()"
   }) }}
 {% endblock %}
