--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,4 +1,4 @@
-{% extends "two-thirds.njk" %}
+{% extends "two-thirds.html" %}
 
 {% from "govuk/components/input/macro.njk" import govukInput %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
@@ -14,11 +14,11 @@
   </p>
 
   <p class="govuk-body">
-    The Environment Agency is committed to keeping residents updated with the latest information, which we publish weekly on our webpage. You can access our web page here: <a href="https://consult.environment-agency.gov.uk/west-midlands/walleys-quarry-landfill-sliverdale/" target="_blank">https://consult.environment-agency.gov.uk/west-midlands/walleys-quarry-landfill-sliverdale/</a> (link opens new tab).
+    The Environment Agency is committed to keeping residents updated with the latest information, which we publish weekly on our webpage. You can access our web page here: <a class="govuk-link" href="https://consult.environment-agency.gov.uk/west-midlands/walleys-quarry-landfill-sliverdale/" target="_blank" rel="noopener">https://consult.environment-agency.gov.uk/west-midlands/walleys-quarry-landfill-sliverdale/</a> (link opens new tab).
   </p>
 
   <p class="govuk-body">
-    You can also receive these updates by email by signing up to our mailing list. Please contact <a href="mailto:Enquiries_WestMids@environment-agency.gov.uk">Enquiries_WestMids@environment-agency.gov.uk</a> if you wish to subscribe for these updates. You may unsubscribe from this list at any time.
+    You can also receive these updates by email by signing up to our mailing list. Please contact <a class="govuk-link" href="mailto:Enquiries_WestMids@environment-agency.gov.uk">Enquiries_WestMids@environment-agency.gov.uk</a> if you wish to subscribe for these updates. You may unsubscribe from this list at any time.
   </p>
 
   <p class="govuk-body">
