--- a/app/views/is-the-smell-at-home.html
+++ b/app/views/is-the-smell-at-home.html
@@ -1,4 +1,4 @@
-{% extends "form.njk" %}
+{% extends "form.html" %}
 
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 
@@ -8,6 +8,6 @@
 
 {% block form %}
   <div id="is-the-smell-at-home">
-    {{ govukRadios(fields.smellAtHome) }}
+    {{ govukRadios(fields.atHome) }}
   </div>
 {% endblock %}
