--- a/app/views/where-is-the-smell.html
+++ b/app/views/where-is-the-smell.html
@@ -1,4 +1,4 @@
-{% extends "form.njk" %}
+{% extends "form.html" %}
 
 {% from "govuk/components/textarea/macro.njk" import govukTextarea %}
 
@@ -8,6 +8,6 @@
 
 {% block form %}
   <div id="where-is-the-smell">
-    {{ govukTextarea(fields.smellLocation) }}
+    {{ govukTextarea(fields.location) }}
   </div>
 {% endblock %}
