--- a/app/views/about-the-smell.html
+++ b/app/views/about-the-smell.html
@@ -1,4 +1,4 @@
-{% extends "form.njk" %}
+{% extends "form.html" %}
 
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 
@@ -8,6 +8,6 @@
 
 {% block form %}
   <div id="about-the-smell">
-    {{ govukRadios(fields.smellStrength) }}
+    {{ govukRadios(fields.strength) }}
   </div>
 {% endblock %}
