--- a/app/views/about-you.html
+++ b/app/views/about-you.html
@@ -1,4 +1,4 @@
-{% extends "form.njk" %}
+{% extends "form.html" %}
 
 {% from "govuk/components/input/macro.njk" import govukInput %}
 {% from "govuk/components/fieldset/macro.njk" import govukFieldset %}
@@ -18,10 +18,10 @@
         classes: "govuk-fieldset__legend--m"
       }
     }) %}
-      {{ govukInput(fields.address) }}
       {{ govukInput(fields.addressLine1) }}
       {{ govukInput(fields.addressLine2) }}
       {{ govukInput(fields.townOrCity) }}
+      {{ govukInput(fields.county) }}
       {{ govukInput(fields.postcode) }}
     {% endcall %}
     {{ govukInput(fields.email) }}
