--- a/app/views/_layout.template.html
+++ b/app/views/_layout.template.html
@@ -57,12 +57,16 @@
           text: "Privacy notice"
         },
         {
-          href: "https://www.gov.uk/contact",
-          text: "Contact"
+          href: "https://www.gov.uk/government/organisations/environment-agency/about/personal-information-charter",
+          text: "Personal information charter"
         },
         {
           href: "/accessibility-statement",
           text: "Accessibility statement"
+        },
+        {
+          href: "https://www.gov.uk/contact",
+          text: "Contact"
         }
       ]
     }
