--- a/app/views/accessibility-statement.html
+++ b/app/views/accessibility-statement.html
@@ -1,15 +1,30 @@
 {% extends "two-thirds.html" %}
 
+{% from "govuk/components/breadcrumbs/macro.njk" import govukBreadcrumbs %}
+
 {% set pageTitle = "Accessibility statement for the " + serviceName + " service" %}
 
+{% block beforeContent %}
+  {{ govukBreadcrumbs({
+    items: [
+      {
+        text: "Home",
+        href: "/"
+      }]
+  }) }}
+{% endblock %}
+
 {% block content %}
-<div id="home-page">
+<div id="accessibility-statement">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl">{{ pageTitle }}</h1>
 
-      <p class="govuk-body">This accessibility statement applies to the {{ serviceName }} website.</p>
-      <p class="govuk-body">This website is run by the Environment Agency. We want as many people as possible to be able to use this website. For example, that means you should be able to:</p>
+      <p class="govuk-body">This accessibility statement applies to the {{ serviceName }} service.</p>
+      <p class="govuk-body">
+        This reporting service is run by the Department for Environment, Farming and Rural Affairs (Defra) and the Environmental Agency.
+        We want as many people as possible to be able to use this service. That means you should be able to:
+      </p>
 
       <ul class="govuk-list govuk-list--bullet">
         <li>change colours, contrast levels and fonts</li>
@@ -20,75 +35,52 @@
       </ul>
 
       <p class="govuk-body">
-        We’ve also made the website text as simple as possible to understand.
+        We've also made the text in the service as simple as possible to understand.
       </p>
 
       <p class="govuk-body">
         <a class="govuk-link" href="https://mcmw.abilitynet.org.uk/">AbilityNet</a> has advice on making your device easier to use if you have a disability.
       </p>
 
+      <h2 class="govuk-heading-l">Accessibility of this service</h2>
+
+      <p class="govuk-body">
+        This service has been tested internally by the team developing it.
+        It has also been developed using GOV.UK patterns, which are rigorously tested for accessibility issues.
+      </p>
+
       <h2 class="govuk-heading-l">Feedback and contact information</h2>
 
-      <p class="govuk-body">If you need information on this website in a different format like an accessible PDF, large print, easy read, audio recording or braille:</p>
+      <p class="govuk-body">Let us know if you:</p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li>email <a class="govuk-link" href="mailto:enquiries@environment-agency.gov.uk">enquiries@environment-agency.gov.uk</a></li>
-        <li>call 03708 506 506 (Monday to Friday, 8am to 5pm)</li>
+        <li>need help using this service</li>
+        <li>find any problems not listed on this page or think we're not meeting accessibility requirements</li>
       </ul>
 
-      <h3 class="govuk-heading-m">Reporting accessibility problems with this website</h3>
+      <p class="govuk-body">Contact: The Incident Communications Service: 0800 80 70 60</p>
+
+      <h3 class="govuk-heading-l">Enforcement procedure</h3>
 
       <p class="govuk-body">
-        We’re always looking to improve the accessibility of this website. If you find any problems not listed on this page or think we’re not meeting accessibility requirements, contact:
+        The Equality and Human Rights Commission (EHRC) is responsible for enforcing the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018 (the 'accessibility regulations').
+        If you're not happy with how we respond to your complaint, <a class="govuk-link" href="https://www.equalityadvisoryservice.com/">contact the Equality Advisory and Support Service (EASS)</a>.
       </p>
 
-      <ul class="govuk-list govuk-list--bullet">
-        <li>email <a class="govuk-link" href="mailto:enquiries@environment-agency.gov.uk">enquiries@environment-agency.gov.uk</a></li>
-        <li>call 03708 506 506 (Monday to Friday, 8am to 5pm)</li>
-      </ul>
-
-      <h3 class="govuk-heading-m">Enforcement procedure</h3>
+      <h2 class="govuk-heading-l">Technical information about this service's accessibility</h2>
 
       <p class="govuk-body">
-        The Equality and Human Rights Commission (EHRC) is responsible for enforcing the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018 (the ‘accessibility regulations’).
+        Defra and The Environmental Agency are committed to making this service accessible, in accordance with the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018.
+        This service has been internally tested for accessibility.
       </p>
-
-      <p class="govuk-body">
-        If you’re not happy with how we respond to your complaint, <a class="govuk-link" href="https://www.equalityadvisoryservice.com/">contact the Equality Advisory and Support Service (EASS)</a>.
-      </p>
-
-      <h2 class="govuk-heading-l">Technical information about this website’s accessibility</h2>
-
-      <p class="govuk-body">
-        The Environment Agency is committed to making its website accessible, in accordance with the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018.
-      </p>
-
-      <h2 class="govuk-heading-l">Compliance status</h2>
-
-      <p class="govuk-body">
-        This website is partially compliant with the <a class="govuk-link" href="https://www.w3.org/TR/WCAG21/">Web Content Accessibility Guidelines version 2.1 AA standard</a>, due to the following exemptions. 
-
-      </p>
-
-      <h2 class="govuk-heading-l">Content that’s not within the scope of the accessibility regulations</h2>
-
-      <p class="govuk-body">
-        The website has the following content which is out of scope of the accessibility regulations:
-      </p>
-
-      <ul class="govuk-list govuk-list--bullet">
-        <li>third party content which is out of our control<!--, for example a corporate logo on the map the website uses--></li>
-        <li>PDF content that was published before 23 September 2018</li>
-      </ul>
 
       <h2 class="govuk-heading-l">Preparation of this accessibility statement</h2>
 
       <p class="govuk-body">
-        This statement was prepared on 1 September 2021. It was last reviewed on 1 September 2021.
-      </p>
-
-      <p class="govuk-body">
-        This website was last tested on 1 September 2021. The test was carried out internally by the Environment Agency.
+        This statement was prepared on 1 September 2021.
+        It was last reviewed on 1 September 2021.
+        This service was last internally tested on 1 September 2021.
+        All pages of the form were tested.
       </p>
     </div>
   </div>
