--- a/app/views/form.html
+++ b/app/views/form.html
@@ -31,7 +31,10 @@
     {% endblock %}
 
     {% block button %}
-      {{ govukButton({ text: formSubmitButtonText | default("Continue") }) }}
+      {{ govukButton({
+        text: formSubmitButtonText | default("Continue"),
+        preventDoubleClick: true
+      }) }}
     {% endblock %}
   </form>
 
