--- a/app/views/home.html
+++ b/app/views/home.html
@@ -5,32 +5,31 @@
 
 {% block twoThirds %}
 <div id="home-page">
-  <h1 class="govuk-heading-xl">Report a problem with smells from Walleys Quarry landfill site</h1>
+  <h1 class="govuk-heading-l">Report smells from Walleys Quarry landfill site</h1>
 
-  <p class="govuk-body">Walleys Quarry Landfill Site Incident Reporting Form</p>
+  <p class="govuk-body-l">Walleys Quarry Landfill Site Incident Reporting Form</p>
 
   <p class="govuk-body">
-    The Environment Agency is aware of the impacts of the operations at Walleys Quarry Landfill Site. We recognise the distress this is causing the local community and are working hard with our partners to challenge the operator, Walleys Quarry Ltd. to take the necessary actions to become compliant with their permits.
+    The Environment Agency provides weekly <a class="govuk-link" href="https://consult.environment-agency.gov.uk/west-midlands/walleys-quarry-landfill-sliverdale/" target="_blank" rel="noopener">updates on Walleys Quarry</a>.
   </p>
 
   <p class="govuk-body">
-    The Environment Agency is committed to keeping residents updated with the latest information, which we publish weekly on our webpage. You can access our web page here: <a class="govuk-link" href="https://consult.environment-agency.gov.uk/west-midlands/walleys-quarry-landfill-sliverdale/" target="_blank" rel="noopener">https://consult.environment-agency.gov.uk/west-midlands/walleys-quarry-landfill-sliverdale/</a> (link opens new tab).
+    If you still wish to report the smell from Walleys Quarry after reading the updates, use this data capture form.
   </p>
 
   <p class="govuk-body">
-    You can also receive these updates by email by signing up to our mailing list. Please contact <a class="govuk-link" href="mailto:Enquiries_WestMids@environment-agency.gov.uk">Enquiries_WestMids@environment-agency.gov.uk</a> if you wish to subscribe for these updates. You may unsubscribe from this list at any time.
+    Completing the short set of questions within this form will help us understand how Walleys Quarry landfill site affects you.
   </p>
 
   <p class="govuk-body">
-    If having reviewed the update on our web page you still wish to report a problem, please use this form. 
-    Please be aware of the following when completing the form:
+    You can subscribe to receive updates, contact: <a class="govuk-link" href="mailto:Enquiries_WestMids@environment-agency.gov.uk">Enquiries_WestMids@environment-agency.gov.uk</a>. You can unsubscribe at any time.
   </p>
 
   {{ govukButton({
     classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8",
     href: "/about-you",
     isStartButton: true,
-    text: "Report incident"
+    text: "Next"
   }) }}
 </div>
 {% endblock %}
