--- a/app/views/confirmation.html
+++ b/app/views/confirmation.html
@@ -1,21 +1,20 @@
 {% extends "two-thirds.html" %}
 
 {% set mainClasses = "govuk-main-wrapper--auto-spacing" %}
+
 {% from "govuk/components/panel/macro.njk" import govukPanel %}
 
 {% block twoThirds %}
-  {{ govukPanel(model) }}
-
-  <p class="govuk-body">Thank you for your submission</p>
+  {{ govukPanel({
+    titleText: "Submission Complete"
+  }) }}
 
   <h2 class="govuk-heading-m">What happens next</h2>
 
   <p class="govuk-body">
-    We’ve sent your application to our customer services team.
+    We've sent your report to our customer services team
   </p>
   <p class="govuk-body">
-    They will contact you either to confirm your registration, or to ask for more information.
+    They will contact you to confirm your submission, or to ask for more information.
   </p>
-  
-  {#<pre><code>{{ complaint | dump(2) | safe }}</code></pre>#}
 {% endblock %}
