--- a/app/views/cookies.html
+++ b/app/views/cookies.html
@@ -18,7 +18,7 @@
 
   <p class="govuk-body">Cookies are small files saved on your phone, tablet or computer when you visit a website.</p>
 
-  <p class="govuk-body">We use cookies to make this site work and collect information about how you use our service.</p>
+  <p class="govuk-body">We use cookies to make this service work and collect information about how you use our service.</p>
 
   <h3 class="govuk-heading-m">Essential cookies</h3>
 
