--- a/app/views/privacy-notice.html
+++ b/app/views/privacy-notice.html
@@ -1,102 +1,107 @@
 {% extends "two-thirds.html" %}
 
-{% set pageTitle = "Privacy notice" %}
+{% from "govuk/components/breadcrumbs/macro.njk" import govukBreadcrumbs %}
+
+{% set pageTitle = "Privacy notice: " + serviceName %}
+
+{% block beforeContent %}
+  {{ govukBreadcrumbs({
+    items: [
+      {
+        text: "Home",
+        href: "/"
+      }]
+  }) }}
+{% endblock %}
 
 {% block content %}
-<div id="home-page">
+<div id="privacy-notice">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl">{{ pageTitle }}</h1>
 
-      <p class="govuk-body">These are the standards you can expect from the Environment Agency when we collect, hold or use your personal information when you use our service.</p>
-      <p class="govuk-body">We do this in line with data protection law, including the <a class="govuk-link" href="https://www.gov.uk/government/publications/guide-to-the-general-data-protection-regulation">General
-        Data Protection Regulation (GDPR)</a> and the <a class="govuk-link" href="https://www.gov.uk/data-protection">Data
-        Protection Act (DPA) 2018</a> .</p>
-
-      <p class="govuk-body">We are a data controller – this means we determine how and why your personal data is processed.
-        You can learn more from our <a class="govuk-link" href="https://www.gov.uk/government/organisations/environment-agency/about/personal-information-charter">personal information charter.</a> </p>
-        
-      <h2 class="govuk-heading-l">Which data we collect</h2>
-
-      <p class="govuk-body">When you use our GOV.UK service, we place small files called cookies onto your computer to collect
-        information about how you use it. You can <a class="govuk-link" href="/cookies">find out more about cookies and how to manage them</a>.</p>
+      <h2 class="govuk-heading-l">Who collects your data</h2>
+      
+      <p class="govuk-body">
+        The controllers collecting your personal data are the Department for Environment, Food and Rural Affairs (Defra) and the Environmental Agency.
+        Defra and the Environmental Agency are committed to the responsible handling and security of personal data.
+        Your privacy is important to us and protected in law through the General Data Protection Regulation (GDPR), The Data Protection Act 2018 (DPA 2018) and the Law Enforcement Directive.
+      </p>
 
       <p class="govuk-body">
-        When you submit feedback through our GOV.UK service, we collect:
+        If you have any questions about how Defra and the Environment Agency intend to use your personal data as set out in this Privacy Notice, 
+        and your associated rights under data protection law, email:
+        <a class="govuk-link" href="mailto:dataprotection@environment-agency.gov.uk">dataprotection@environment-agency.gov.uk</a>.
       </p>
+
+      <h2 class="govuk-heading-l">The data we collect</h2>
+
+      <p class="govuk-body">The personal information we collect includes:</p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li>your email address if you include it</li>
-        <li>your Internet Protocol (IP) address, and details of which version of which <a class="govuk-link" href="https://www.gov.uk/support/browsers">web browser</a> you use</li>
+        <li>your name</li>
+        <li>contact details, which may include a home address, email address and telephone numbers</li>
+        <li>the details of your complaint</li>
       </ul>
 
-      <p class="govuk-body">We are lawfully allowed to process your personal data because you consent to us doing so. You have
-        the right to withdraw this consent at any time by contacting us:</p>
+      <p class="govuk-body">We do not process special category data.</p>
 
-      <p class="govuk-body">Email: <a class="govuk-link" href="mailto:enquiries@environment-agency.gov.uk">enquiries@environment-agency.gov.uk</a></p>
-      <p class="govuk-body">Telephone: 03708 506 506</p>
+      <h3 class="govuk-heading-l">How your data is used</h3>
 
-      <h3 class="govuk-heading-m">Why we collect your data</h3>
+      <p class="govuk-body">
+        Your data is used by official authorities (Defra and the Environmental Agency) to provide us with information on how Walleys Quarry is affecting you.
+        We use your personal data to respond to you regarding your incident report if necessary.
+      </p>
 
-      <p class="govuk-body">We collect data to:</p>
-
+      <p class="govuk-body">We do not:</p>
+      
       <ul class="govuk-list govuk-list--bullet">
-        <li>improve the service by monitoring how it’s used and analysing feedback</li>
-        <li>respond to any feedback you provide, if you ask us to</li>
+        <li>use your data to make an automated decision or for automated profiling</li>
+        <li>share your personal data with anyone outside the Environment Agency without your consent, unless we must do so by law</li>
+        <li>sell or rent your data to third parties</li>
+        <li>share your data with thirds parties for marketing purposes</li>
       </ul>
 
-      <p class="govuk-body">We will not share or disclose your personal data to any party outside the Environment Agency without
-        your consent unless we are lawfully able to do so. </p>
-
-      <h3 class="govuk-heading-m">How long we retain your data</h3>
-
       <p class="govuk-body">
-        After 24 months we delete all personal data. We may retain anonymised feedback longer than this.
+        We will only share information when necessary to meet the statutory requirements of the Environmental Information Regulations 2004 and The Freedom of Information Act 2000.
+        Our <a class="govuk-link" href="https://www.gov.uk/government/organisations/environment-agency/about/personal-information-charter">Personal Information Charter</a> explains more about how your data is processed.
       </p>
 
-      <h2 class="govuk-heading-l">Keeping your data secure</h2>
+      <h3 class="govuk-heading-l">How long your data is held</h3>
 
       <p class="govuk-body">
-        We have procedures and security features in place to keep your data secure once we receive it. It’s
-        stored on secure servers in the <a class="govuk-link" href="https://www.gov.uk/eu-eea">European Economic Area</a>
-        (EEA).
+        We will keep your personal data while the incident is ongoing and for up to seven years after its conclusion.
       </p>
 
-      <h2 class="govuk-heading-l">Any data you send is at your own risk</h2>
+      <h2 class="govuk-heading-l">Where your data is processed and stored</h2>
 
       <p class="govuk-body">
-        Sending information over the internet is generally not completely secure, and we can’t guarantee the security of your data while it’s in transit.
+        We store your data in Dataverse (a web application that helps us analyse research data) hosted either in the UK (London or Cardiff) or in Europe (Amsterdam or Dublin).
+        Data is not transferred outside the European Economic Area.
+        Data is stored in our National Incident Reporting System (NIRS) in Milton Keynes.
       </p>
 
-      <h2 class="govuk-heading-l">Your rights</h2>
-
-      <p class="govuk-body">You have rights under the General Data Protection Regulation (GDPR), including the right to <a class="govuk-link" href="https://www.gov.uk/data-protection">access
-        your data</a> and the right to complain to the <a class="govuk-link" href="https://ico.org.uk/">Information
-        Commissioner’s Office</a>.</p>
+      <h2 class="govuk-heading-l">Contact details</h2>
 
       <p class="govuk-body">
-        You have the right to withdraw consent. You can <a class="govuk-link" href="https://www.gov.uk/government/organisations/environment-agency/about/personal-information-charter#contact-us">contact us</a> to do this.
+        Our Data Protection Officer (DPO) is responsible for independent advice and monitoring of the Environment Agency's use of data and information.
       </p>
-
-      <p class="govuk-body">You can find out more about your rights in our <a class="govuk-link" href="https://www.gov.uk/government/organisations/environment-agency/about/personal-information-charter">personal Information charter</a>.</p>
-        
-      <h2 class="govuk-heading-l">Links to other websites</h2>
-
-      <p class="govuk-body">GOV.UK contains links to other websites. This privacy policy only applies to GOV.UK and doesn’t
-        cover other government services and transactions that we link to. These services, such as <a class="govuk-link" href="https://www.gov.uk/government/publications/introducing-govuk-verify">GOV.UK
-          Verify</a>, have their own terms, conditions and privacy policies.</p>
 
       <p class="govuk-body">
-        If you go to another website directly from this one, read its privacy policy to find out what it does with your information.
+        If you have any concerns or questions about how we process personal data, or if you would like to make a complaint or request relating to data protection, email our DPO: <a class="govuk-link" href="mailto:dataprotection@environment-agency.gov.uk">dataprotection@environment-agency.gov.uk</a>.
       </p>
-
-      <h2 class="govuk-heading-l">Following a link to GOV.UK from another website</h2>
 
       <p class="govuk-body">
-        If you come to GOV.UK from another website, we may receive information from the other website. We
-          don’t use this data. You should read the privacy policy of the website you came from to find out
-          more about this.
+        You can write to The Data Protection Officer, Environment Agency, Horizon House, Deanery Road, Bristol, BS1 5AH.
       </p>
+
+      <p class="govuk-body">
+        The Information Commissioner's Office (ICO) regulates the data protection legislation.
+        The ICO asks that you try to resolve any data protection concerns with the DPO in the first instance before complaining.
+        You have the right to <a class="govuk-link" href="https://ico.org.uk/make-a-complaint/">lodge a complaint with the ICO</a> at any time.
+      </p>
+
+      <p class="govuk-body">This Privacy Notice was last updated on 1 September 2021.</p>
     </div>
   </div>
 </div>
