--- a/app/views/confirmation.html
+++ b/app/views/confirmation.html
@@ -12,7 +12,7 @@
   <h2 class="govuk-heading-m">What happens next</h2>
 
   <p class="govuk-body">
-    We've sent your report to our customer services team
+    We've sent your report to our customer services team.
   </p>
   <p class="govuk-body">
     They will contact you to confirm your submission, or to ask for more information.
