Final page button text "Submit"

--- a/app/views/details-of-the-smell.html
+++ b/app/views/details-of-the-smell.html
@@ -3,6 +3,8 @@
 {% from "govuk/components/input/macro.njk" import govukInput %}
 {% from "govuk/components/textarea/macro.njk" import govukTextarea %}
 
+{% set formSubmitButtonText = "Submit" %}
+
 {% block beforeForm %}
   <h1 class="govuk-heading-l">Details of the smell</h1>
 {% endblock %}
