Update confirmation content

--- a/app/views/confirmation.html
+++ b/app/views/confirmation.html
@@ -9,12 +9,23 @@
     titleText: "Submission Complete"
   }) }}
 
+  <p class="govuk-body">Thank you for submitting your report.</p>
+
   <h2 class="govuk-heading-m">What happens next</h2>
 
   <p class="govuk-body">
-    We've sent your report to our customer services team.
+    Your report has been logged onto our National Incident Reporting System (NIRS) database.
   </p>
+
   <p class="govuk-body">
-    They will contact you to confirm your submission, or to ask for more information.
+    If you provided a valid email address, you will receive an email confirming the submission of your report, and a copy of your NIRS reference number.
+  </p>
+
+  <p class="govuk-body">
+    We may need to contact you to ask for more information.
+  </p>
+
+  <p class="govuk-body">
+    The Environment Agency recognises the distress that the smell from Walleys Quarry is causing the local community. We are working hard to respond to Walleys Quarry reports and complaints as quickly as possible.
   </p>
 {% endblock %}
