Update Privacy Notice

--- a/app/views/privacy-notice.html
+++ b/app/views/privacy-notice.html
@@ -20,88 +20,77 @@
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl">{{ pageTitle }}</h1>
 
-      <h2 class="govuk-heading-l">Who collects your data</h2>
-      
       <p class="govuk-body">
-        The controllers collecting your personal data are the Department for Environment, Food and Rural Affairs (Defra) and the Environmental Agency.
-        Defra and the Environmental Agency are committed to the responsible handling and security of personal data.
-        Your privacy is important to us and protected in law through the General Data Protection Regulation (GDPR), The Data Protection Act 2018 (DPA 2018) and the Law Enforcement Directive.
+        We are the Environment Agency and we run the environmental incident reporting service.
+        We are the data controller for this service. A data controller determines how and why personal data (personal information) is processed.
+        Our <a class="govuk-link" href="https://www.gov.uk/government/organisations/environment-agency/about/personal-information-charter">personal information charter</a> explains how we deal with your personal information
       </p>
 
-      <p class="govuk-body">
-        If you have any questions about how Defra and the Environment Agency intend to use your personal data as set out in this Privacy Notice, 
-        and your associated rights under data protection law, email:
-        <a class="govuk-link" href="mailto:dataprotection@environment-agency.gov.uk">dataprotection@environment-agency.gov.uk</a>.
-      </p>
-
-      <h2 class="govuk-heading-l">The data we collect</h2>
-
-      <p class="govuk-body">The personal information we collect includes:</p>
+      <h2 class="govuk-heading-l">The personal data we need</h2>
 
       <ul class="govuk-list govuk-list--bullet">
         <li>your name</li>
-        <li>contact details, which may include a home address, email address and telephone numbers</li>
-        <li>the details of your complaint</li>
+        <li>your contact details which may include home address, email address and phone numbers</li>
+        <li>details of your complaint</li>
       </ul>
 
-      <p class="govuk-body">We do not process special category data.</p>
-
-      <h3 class="govuk-heading-l">How your data is used</h3>
+      <p class="govuk-body">Processing your personal data means we have a full record of the environmental incident.</p>
 
       <p class="govuk-body">
-        Your data is used by official authorities (Defra and the Environmental Agency) to provide us with information on how Walleys Quarry is affecting you.
-        We use your personal data to respond to you regarding your incident report if necessary.
+        The lawful basis we rely on to process your personal data is article 6(1)(e) of the UK General Data Protection Regulation (GDPR), 
+        which allows us to process personal data when this is necessary to exercise our official authority set out in law under;
       </p>
 
-      <p class="govuk-body">We do not:</p>
-      
       <ul class="govuk-list govuk-list--bullet">
-        <li>use your data to make an automated decision or for automated profiling</li>
-        <li>share your personal data with anyone outside the Environment Agency without your consent, unless we must do so by law</li>
-        <li>sell or rent your data to third parties</li>
-        <li>share your data with thirds parties for marketing purposes</li>
+        <li>the Environment Act 1990</li>
+        <li>Environmental Permitting (England and Wales) Regulations 2016</li>
+        <li>the Environment Act 1995</li>
       </ul>
 
+      <h3 class="govuk-heading-l">What we do with your personal data</h3>
+
       <p class="govuk-body">
-        We will only share information when necessary to meet the statutory requirements of the Environmental Information Regulations 2004 and The Freedom of Information Act 2000.
-        Our <a class="govuk-link" href="https://www.gov.uk/government/organisations/environment-agency/about/personal-information-charter">Personal Information Charter</a> explains more about how your data is processed.
+        We use personal data to respond to you regarding your incident report if necessary.
+        We do not use your data to make any automated decisions or for automated profiling.
+        We won’t share your personal data with anyone else outside the Environment
+        Agency without your consent, unless we are required to do so by law.
       </p>
 
-      <h3 class="govuk-heading-l">How long your data is held</h3>
+      <h2 class="govuk-heading-l">How long we keep your personal data</h2>
 
       <p class="govuk-body">
-        We will keep your personal data while the incident is ongoing and for up to seven years after its conclusion.
+        We will keep your personal data while the incident is ongoing and for seven years after its conclusion in line with our retention policy.
       </p>
 
-      <h2 class="govuk-heading-l">Where your data is processed and stored</h2>
+      <h2 class="govuk-heading-l">Where your personal data is processed and stored</h2>
 
       <p class="govuk-body">
-        We store your data in Dataverse (a web application that helps us analyse research data) hosted either in the UK (London or Cardiff) or in Europe (Amsterdam or Dublin).
-        Data is not transferred outside the European Economic Area.
-        Data is stored in our National Incident Reporting System (NIRS) in Milton Keynes.
+        Any personal data will be stored in our National Incident Reporting System (NIRS) which is hosted in Milton Keynes.
       </p>
 
       <h2 class="govuk-heading-l">Contact details</h2>
 
       <p class="govuk-body">
-        Our Data Protection Officer (DPO) is responsible for independent advice and monitoring of the Environment Agency's use of data and information.
+        Our Data Protection Officer (DPO) is responsible for independent advice and monitoring of the Environment Agency’s use of personal information.
       </p>
 
       <p class="govuk-body">
-        If you have any concerns or questions about how we process personal data, or if you would like to make a complaint or request relating to data protection, email our DPO: <a class="govuk-link" href="mailto:dataprotection@environment-agency.gov.uk">dataprotection@environment-agency.gov.uk</a>.
+        If you have any concerns or queries about how we process personal data, or if you would like to make a complaint or request relating to data protection, please contact our DPO:
       </p>
 
       <p class="govuk-body">
-        You can write to The Data Protection Officer, Environment Agency, Horizon House, Deanery Road, Bristol, BS1 5AH.
+        Data Protection Officer, Environment Agency, Horizon House, Deanery Road, Bristol, BS1 5AH. Email: <a class="govuk-link" href="mailto:dataprotection@environment-agency.gov.uk">dataprotection@environment-agency.gov.uk</a>.
       </p>
 
       <p class="govuk-body">
-        The Information Commissioner's Office (ICO) regulates the data protection legislation.
-        The ICO asks that you try to resolve any data protection concerns with the DPO in the first instance before complaining.
-        You have the right to <a class="govuk-link" href="https://ico.org.uk/make-a-complaint/">lodge a complaint with the ICO</a> at any time.
+        You can find out about your personal data rights from the <a class="govuk-link" href="https://ico.org.uk/make-a-complaint/">Information Commissioner's Office</a> (ICO).
+        The ICO regulate the data protection legislation.
+        You have the right to lodge a complaint with them at any time.
       </p>
 
-      <p class="govuk-body">This Privacy Notice was last updated on 1 September 2021.</p>
+      <p class="govuk-body">
+        This notice was last updated on 16 September 2021.
+      </p>
     </div>
   </div>
 </div>
