--- a/app/views/home.html
+++ b/app/views/home.html
@@ -10,7 +10,7 @@
   <p class="govuk-body-l">Walleys Quarry Landfill Site Incident Reporting Form</p>
 
   <p class="govuk-body">
-    The Environment Agency provides weekly updates on Walleys Quarry via its <a class="govuk-link" href="https://consult.environment-agency.gov.uk/west-midlands/walleys-quarry-landfill-sliverdale/" target="_blank" rel="noopener">Citizen Space website</a>.
+    The Environment Agency provides weekly updates on Walleys Quarry via its <a class="govuk-link" href="https://consult.environment-agency.gov.uk/west-midlands/walleys-quarry-landfill-sliverdale/" target="_blank" rel="noopener">Citizen Space website (opens in new window)</a>.
   </p>
 
   <p class="govuk-body">To subscribe to receive these updates directly, please contact the West Midlands Enquiries Team at: <a class="govuk-link" href="mailto:Enquiries_WestMids@environment-agency.gov.uk">Enquiries_WestMids@environment-agency.gov.uk</a>. You can unsubscribe at any time.</p>
