--- a/app/views/home.html
+++ b/app/views/home.html
@@ -5,7 +5,7 @@
 
 {% block twoThirds %}
 <div id="home-page">
-  <h1 class="govuk-heading-l">Report a smell from Walleys Quarry landfill site</h1>
+  <h1 class="govuk-heading-l">{{serviceName}}</h1>
 
   <p class="govuk-body-l">Walleys Quarry Landfill Site Incident Reporting Form</p>
 
