--- a/app/views/about-the-smell.html
+++ b/app/views/about-the-smell.html
@@ -2,6 +2,8 @@
 
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 
+{% set pageTitle = pageHeading + " - " + pageTitle %}
+
 {% block form %}
   <div id="about-the-smell">
     {{ govukRadios(fields.strength) }}
