--- a/app/views/about-you.html
+++ b/app/views/about-you.html
@@ -3,8 +3,10 @@
 {% from "govuk/components/input/macro.njk" import govukInput %}
 {% from "govuk/components/fieldset/macro.njk" import govukFieldset %}
 
+{% set pageTitle = pageHeading + " - " + pageTitle %}
+
 {% block beforeForm %}
-  <h1 class="govuk-heading-l">About you</h1>
+  <h1 class="govuk-heading-l">{{ pageHeading }}</h1>
 {% endblock %}
 
 {% block form %}
