--- a/app/views/accessibility-statement.html
+++ b/app/views/accessibility-statement.html
@@ -2,7 +2,8 @@
 
 {% from "govuk/components/breadcrumbs/macro.njk" import govukBreadcrumbs %}
 
-{% set pageTitle = "Accessibility statement for the " + serviceName + " service" %}
+{% set pageHeading = "Accessibility statement for the " + serviceName + " service" %}
+{% set pageTitle = pageHeading + " - GOV.UK" %}
 
 {% block beforeContent %}
   {{ govukBreadcrumbs({
@@ -18,7 +19,7 @@
 <div id="accessibility-statement">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl">{{ pageTitle }}</h1>
+      <h1 class="govuk-heading-xl">{{ pageHeading }}</h1>
 
       <p class="govuk-body">This accessibility statement applies to the {{ serviceName }} service.</p>
       <p class="govuk-body">
