--- a/app/views/cookies.html
+++ b/app/views/cookies.html
@@ -3,6 +3,9 @@
 {% from "govuk/components/breadcrumbs/macro.njk" import govukBreadcrumbs %}
 {% from "govuk/components/table/macro.njk" import govukTable %}
 
+{% set pageHeading = "Cookies" %}
+{% set pageTitle = pageHeading + " - " + pageTitle %}
+
 {% block beforeContent %}
   {{ govukBreadcrumbs({
     items: [
@@ -14,7 +17,7 @@
 {% endblock %}
 
 {% block twoThirds %}
-  <h2 class="govuk-heading-l">Cookies</h2>
+  <h2 class="govuk-heading-l">{{ pageHeading }}</h2>
 
   <p class="govuk-body">Cookies are small files saved on your phone, tablet or computer when you visit a website.</p>
 
