--- a/app/views/privacy-notice.html
+++ b/app/views/privacy-notice.html
@@ -2,7 +2,9 @@
 
 {% from "govuk/components/breadcrumbs/macro.njk" import govukBreadcrumbs %}
 
-{% set pageTitle = "Privacy notice: " + serviceName %}
+{% set pageHeading = "Privacy notice: " + serviceName %}
+{% set pageTitle = pageHeading + " - GOV.UK" %}
+
 
 {% block beforeContent %}
   {{ govukBreadcrumbs({
@@ -18,7 +20,7 @@
 <div id="privacy-notice">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl">{{ pageTitle }}</h1>
+      <h1 class="govuk-heading-xl">{{ pageHeading }}</h1>
 
       <p class="govuk-body">
         We are the Environment Agency and we run the environmental incident reporting service.
