--- a/app/views/confirmation.html
+++ b/app/views/confirmation.html
@@ -4,7 +4,7 @@
 
 {% set mainClasses = "govuk-main-wrapper--auto-spacing" %}
 
-{% set pageHeading = "Submission Complete" %}
+{% set pageHeading = "Submission complete" %}
 {% set pageTitle = pageHeading + " - " + pageTitle %}
 
 {% block twoThirds %}
