--- a/app/views/home.html
+++ b/app/views/home.html
@@ -18,18 +18,13 @@
   </p>
 
   <p class="govuk-body">
-    Completing the short set of questions within this form will help us to understand how Walleys Quarry landfill site affects you.
-  </p>
-
-  <p class="govuk-body">
     All reports are logged, and a unique reference number will be generated for each report. This number will be sent to you immediately after completion of this form, if you provide us with a valid email address.
   </p>
 
   {{ govukButton({
     classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8",
     href: "/about-you",
-    isStartButton: true,
-    text: "Start"
+    text: "Continue"
   }) }}
 </div>
 {% endblock %}
