--- a/app/views/confirmation.html
+++ b/app/views/confirmation.html
@@ -4,7 +4,7 @@
 
 {% set mainClasses = "govuk-main-wrapper--auto-spacing" %}
 
-{% set pageHeading = "Submission complete" %}
+{% set pageHeading = "We’ve received your report" %}
 {% set pageTitle = pageHeading + " - " + pageTitle %}
 
 {% block twoThirds %}
@@ -12,23 +12,19 @@
     titleText: pageHeading
   }) }}
 
-  <p class="govuk-body">Thank you for submitting your report.</p>
-
   <h2 class="govuk-heading-m">What happens next</h2>
 
   <p class="govuk-body">
-    Your report has been logged onto our National Incident Reporting System (NIRS) database.
+    Your report will be logged into our National Incident Recording System.
+    You will get an email to confirm this. It will include your reference number for the report.
   </p>
 
   <p class="govuk-body">
-    If you provided a valid email address, you will receive an email confirming the submission of your report, and a copy of your NIRS reference number.
+    If we need more information, we will contact you.
   </p>
 
   <p class="govuk-body">
-    We may need to contact you to ask for more information.
-  </p>
-
-  <p class="govuk-body">
-    The Environment Agency recognises the distress that the smell from Walleys Quarry is causing the local community. We are working hard to respond to Walleys Quarry reports and complaints as quickly as possible.
+    The Environment Agency recognises the distress that the smell from Walleys Quarry is causing to the local community.
+    We are working hard to respond to Walleys Quarry reports and complaints as quickly as possible.
   </p>
 {% endblock %}
