Add Hapi Crumb plugin (#27)
Robot protection in Silverline is detecting issues with empty form posts. Adding the missing crumb protection should resolve this.

* add hapi/crumb
* update tests to mock crumb

--- a/app/views/form.html
+++ b/app/views/form.html
@@ -28,7 +28,7 @@
 
   <form id="form" method="post" action="{{formAction | default('')}}"
     novalidate enctype="{{formEncType | default('application/x-www-form-urlencoded')}}">
-
+    <input type="hidden" name="crumb" value="{{crumb}}"/>
     {% block form %}
     {% endblock %}
 
