--- a/app/views/_layout.template.html
+++ b/app/views/_layout.template.html
@@ -25,7 +25,7 @@
 
 {% block header %}
   {{ govukHeader({
-    homepageUrl: "/",
+    homepageUrl: "https://www.gov.uk",
     containerClasses: "govuk-width-container",
     serviceName: serviceName,
     serviceUrl: "/"
