--- a/app/views/home.html
+++ b/app/views/home.html
@@ -8,7 +8,7 @@
   <h1 class="govuk-heading-l">{{serviceName}}</h1>
 
   <p class="govuk-body">
-    The Environment Agency provides weekly updates on Walleys Quarry via its <a class="govuk-link" href="https://consult.environment-agency.gov.uk/west-midlands/walleys-quarry-landfill-sliverdale/" target="_blank" rel="noopener noreferrer">Citizen Space website (opens in new window)</a>.
+    The Environment Agency provides updates on Walleys Quarry via its <a class="govuk-link" href="https://engageenvironmentagency.uk.engagementhq.com/hub-page/walleys-quarry-landfill" target="_blank" rel="noopener noreferrer">new website</a>.
   </p>
 
   <p class="govuk-body">To subscribe to receive these updates directly, please contact the West Midlands Enquiries Team at: <a class="govuk-link" href="mailto:Enquiries_WestMids@environment-agency.gov.uk">Enquiries_WestMids@environment-agency.gov.uk</a>. You can unsubscribe at any time.</p>
