Add feedback link to confirmation page (#40)
* Add feedback link to confirmation page and don't open link in new tab

--- a/app/views/confirmation.html
+++ b/app/views/confirmation.html
@@ -27,4 +27,8 @@
     The Environment Agency recognises the distress that the smell from Walleys Quarry is causing to the local community.
     We are working hard to respond to Walleys Quarry reports and complaints as quickly as possible.
   </p>
+
+  <p class="govuk-body">
+  <a class="govuk-link govuk-link--no-visited-state" href="https://www.gov.uk/done/report-smell-walleys-quarry">Give feedback on using this service</a>
+  </p>
 {% endblock %}
